tests/interpreter/if-statement-then-block-error.stderr
error: identifier 'x' is not defined
 --> $DIR/if-statement-then-block-error.lox:2:5
  |
2 |     x;
  |     ^
