tests/interpreter/if-statement-then-block-error.lox
if true {
    x;
} else {
    y;
}
